syntax ="proto3";
package user;

option java_package="logic.protocol";
option java_multiple_files=true;
option java_outer_classname = "Protocol";

message Player{
    uint32 id = 1;
    string name = 2;
    uint64 enterTime = 3;
}

// 心跳测试
message HeartBeat{
	//服务器当前时间
	int64 system_currtime = 1;
}

//protoc --java_out=../ Protocol.proto